# stock-study-project

./: .env.example  .gitignore  SPAS_系统功能与使用指南.md  pyproject.toml  requirements.txt  sector_probability_system.agent.final.md  start_all.bat  stop_all.bat
config/: sectors.yaml  (+1 more)
investment_academy/: README.md  app.py  pyproject.toml  requirements.txt  使用指南.md
investment_academy/.streamlit/: config.toml
investment_academy/backend/: main.py  schemas.py
investment_academy/backend/routers/: content.py  knowledge.py  manual_analysis.py  market.py  progress.py  quiz.py  sandbox.py  spas.py  user.py
investment_academy/bridge/: __init__.py  data_reader.py  knowledge_extractor.py
investment_academy/core/bridge/: data_reader.py  knowledge_extractor.py
investment_academy/core/db/: __init__.py  repository.py  schema.sql
investment_academy/core/engine/: content_loader.py  sandbox_engine.py
investment_academy/core/models/: __init__.py  progress.py
investment_academy/core/utils/: path_utils.py
investment_academy/db/: __init__.py  academy.db  repository.py  schema.sql
investment_academy/frontend/: package-lock.json  package.json  vue.config.js
investment_academy/frontend/public/: index.html
investment_academy/frontend/src/: App.vue  main.js
investment_academy/interactive/: __init__.py  content_loader.py  quiz_widget.py  sandbox_engine.py
investment_academy/models/: quiz.py  user.py
investment_academy/pages/: sandbox.py
investment_academy/pages/knowledge/: p1_basics.py
investment_academy/streamlit_app/: app.py
investment_academy/tests/: conftest.py
(+190 files in other folders)
