[project]
name = "investment-academy"
version = "0.1.0"
description = "投资学院 — 交互式投资学习系统（与 SPAS 解耦）"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28",
    "plotly>=5.17",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.30",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: integration tests that require real SPAS data",
]
